add projects, images

--- a/portfolio.html
+++ b/portfolio.html
@@ -136,9 +136,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img8.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP1_370.jpg 370w,
+                                            ./images/tablet/TP1_354.jpg  354w,
+                                            ./images/mobile/MP1_450.jpg  450w,
+                                            ./images/desktop/DP1_740.jpg 740w,
+                                            ./images/tablet/TP1_708.jpg  708w,
+                                            ./images/mobile/MP1_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP1_450.jpg"
+                                        alt="MP1_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -164,9 +172,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img9.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP2_370.jpg 370w,
+                                            ./images/tablet/TP2_354.jpg  354w,
+                                            ./images/mobile/MP2_450.jpg  450w,
+                                            ./images/desktop/DP2_740.jpg 740w,
+                                            ./images/tablet/TP2_708.jpg  708w,
+                                            ./images/mobile/MP2_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP2_450.jpg"
+                                        alt="MP2_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -195,9 +211,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img10.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP3_370.jpg 370w,
+                                            ./images/tablet/TP3_354.jpg  354w,
+                                            ./images/mobile/MP3_450.jpg  450w,
+                                            ./images/desktop/DP3_740.jpg 740w,
+                                            ./images/tablet/TP3_708.jpg  708w,
+                                            ./images/mobile/MP3_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP2_450.jpg"
+                                        alt="MP3_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -226,9 +250,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img11.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP4_370.jpg 370w,
+                                            ./images/tablet/TP4_354.jpg  354w,
+                                            ./images/mobile/MP4_450.jpg  450w,
+                                            ./images/desktop/DP4_740.jpg 740w,
+                                            ./images/tablet/TP4_708.jpg  708w,
+                                            ./images/mobile/MP4_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP4_450.jpg"
+                                        alt="MP4_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -257,9 +289,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img12.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP5_370.jpg 370w,
+                                            ./images/tablet/TP5_354.jpg  354w,
+                                            ./images/mobile/MP5_450.jpg  450w,
+                                            ./images/desktop/DP5_740.jpg 740w,
+                                            ./images/tablet/TP5_708.jpg  708w,
+                                            ./images/mobile/MP5_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP5_450.jpg"
+                                        alt="MP5_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -288,9 +328,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img13.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP6_370.jpg 370w,
+                                            ./images/tablet/TP6_354.jpg  354w,
+                                            ./images/mobile/MP6_450.jpg  450w,
+                                            ./images/desktop/DP6_740.jpg 740w,
+                                            ./images/tablet/TP6_708.jpg  708w,
+                                            ./images/mobile/MP6_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP6_450.jpg"
+                                        alt="MP6_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -319,9 +367,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img14.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP7_370.jpg 370w,
+                                            ./images/tablet/TP7_354.jpg  354w,
+                                            ./images/mobile/MP7_450.jpg  450w,
+                                            ./images/desktop/DP7_740.jpg 740w,
+                                            ./images/tablet/TP7_708.jpg  708w,
+                                            ./images/mobile/MP7_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP7_450.jpg"
+                                        alt="MP7_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -349,9 +405,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img15.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP8_370.jpg 370w,
+                                            ./images/tablet/TP8_354.jpg  354w,
+                                            ./images/mobile/MP8_450.jpg  450w,
+                                            ./images/desktop/DP8_740.jpg 740w,
+                                            ./images/tablet/TP8_708.jpg  708w,
+                                            ./images/mobile/MP8_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP8_450.jpg"
+                                        alt="MP8_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
@@ -378,9 +442,17 @@
                                 <div class="project__desc">
                                     <img
                                         class="project__img"
-                                        src="./images/img16.jpg"
-                                        alt=""
-                                        width="370"
+                                        srcset="
+                                            ./images/desktop/DP9_370.jpg 370w,
+                                            ./images/tablet/TP9_354.jpg  354w,
+                                            ./images/mobile/MP9_450.jpg  450w,
+                                            ./images/desktop/DP9_740.jpg 740w,
+                                            ./images/tablet/TP9_708.jpg  708w,
+                                            ./images/mobile/MP9_900.jpg  900w
+                                        "
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
+                                        src="./images/mobile/MP9_450.jpg"
+                                        alt="MP9_450"
                                     />
                                     <div class="project__overlay">
                                         <p class="project__description">
